[build-system]
requires = ["setuptools>=58.1.0", "Cython==0.29.34"]
build-backend = "setuptools.build_meta"

[project]
name = "gpt4all"
version = "0.1.0"
authors = [
  { name="Richard Guo", email="richard@nomic.ai" },
]
description = "Python bindings for GPT4All"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://pypi.org/project/gpt4all/"
